src/pi/err.log
g++ -DASIO_STANDALONE -std=c++17 -Wall -pedantic -g -I /home/andrew/diy/software/led-server/src/pi/.. -c led-d.cpp
led-d.cpp: In function ‘int main(int, char**)’:
led-d.cpp:60:26: error: ‘make_final_action’ is not a member of ‘util’; did you mean ‘unix::make_final_action’?
   60 |     auto cleanup = util::make_final_action
      |                          ^~~~~~~~~~~~~~~~~
In file included from led-d.cpp:11:
/home/andrew/diy/software/led-server/src/pi/../util/final-action.hpp:23:28: note: ‘unix::make_final_action’ declared here
   23 |   final_action_t<action_t> make_final_action (action_t action)
      |                            ^~~~~~~~~~~~~~~~~
make: *** [Makefile:39: led-d.o] Error 1
